--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<p class="centered"><hr></p>
 					<div class="col-lg-6 col-lg-offset-3">
 						<p style="color: #29293e;">Programaciones individualizadas:
-Pongo a tu disposición todos mis recursos para lograr tus objetivos de la forma más eficiente, para ello vamos a realizar lo siguiente:
+Pongo a tu disposición todos mis recursos para lograr tus objetivos de la forma más eficiente. Para ello vamos a realizar lo siguiente:
 
 1) Evaluación inicial: Se basa en la obtención de datos respecto a problemas de salud, datos antropométricos, marcas iniciales... A parte, se realizará una valoración funcional completa con la que veremos los puntos débiles que deberemos tener en cuenta y corregir.
 
