--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Pongo a tu disposición todos mis recursos para lograr tus objetivos de la forma
 		<div id="sectionfooter">
 			<div class="container">
 				<div class="row centered">
-					<h3 style="color: #000000;">PORTFOLIO</h3>
+					<h3 style="color: #000000;">SERVICES</h3>
 					<p class="centered"><hr></p>					
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="imagebox">
